--- a/site/index.html
+++ b/site/index.html
@@ -16,23 +16,23 @@ hero:
     url: https://github.com/heptio/velero/releases/tag/v1.0.0-alpha.2
   promo1:
     icon: /img/disaster-recover-icon.svg
-    url: http://www.example.com?box1
+    #url: http://www.example.com?box1
     title: Disaster Recovery
     content: Reduces time to recovery in case of infrastructure loss, data corruption, and/or service outages.
   promo2:
     icon: /img/data-migration-icon.svg
-    url: http://www.example.com?box2
+    #url: http://www.example.com?box2
     title: Data Migration
     content: Enables cluster portability by easily migrating Kubernetes resources from one cluster to another​.
   promo3:
     icon: /img/data-protection-icon.svg
-    url: http://www.example.com?box3
+    #url: http://www.example.com?box3
     title: Data Protection
     content: Offers key data protection features such as scheduled backups, retention schedules, and pre or post-backup hooks for custom actions.
 secondary_ctas:
   cta1:
     title: Introduction to Velero
-    url: https://heptio.github.io/velero/
+    url: /Velero-is-an-Open-Source-Tool-to-Back-up-and-Migrate-Kubernetes-Clusters/
     content: Learn about Velero and how to protect your Kubernetes resources and volumes.
   cta2:
     title: How Do You Use Velero?
@@ -69,9 +69,13 @@ secondary_ctas:
         <div class="card card-light mb-3 mb-md-0 shadow-sm">
           <div class="card-body match-height">
             <figure>
-              <img class="mb-4" src="{{ page.hero.promo1.icon }}" alt="{{ page.hero.promo1.title }}" />
+              <img src="{{ page.hero.promo1.icon }}" alt="{{ page.hero.promo1.title }}" />
             </figure>
+            {% if page.hero.promo1.url | size > 0 %}
             <h5><a href="{{ page.hero.promo1.url }}" class="dark">{{ page.hero.promo1.title }}</a></h5>
+            {% else %}
+            <h5>{{ page.hero.promo1.title }}</h5>
+            {% endif %}
             <p>{{ page.hero.promo1.content }}</p>
           </div>
         </div>
@@ -80,9 +84,13 @@ secondary_ctas:
         <div class="card card-light mb-3 mb-md-0 shadow-sm">
           <div class="card-body match-height">
             <figure>
-              <img class="mb-4" src="{{ page.hero.promo2.icon }}" alt="{{ page.hero.promo2.title }}" />
+              <img src="{{ page.hero.promo2.icon }}" alt="{{ page.hero.promo2.title }}" />
             </figure>
+            {% if page.hero.promo2.url | size > 0 %}
             <h5><a href="{{ page.hero.promo2.url }}" class="dark">{{ page.hero.promo2.title }}</a></h5>
+            {% else %}
+            <h5>{{ page.hero.promo2.title }}</h5>
+            {% endif %}
             <p>{{ page.hero.promo2.content }}</p>
           </div>
         </div>
@@ -91,9 +99,13 @@ secondary_ctas:
         <div class="card card-light mb-3 mb-md-0 shadow-sm">
           <div class="card-body match-height">
             <figure>
-              <img class="mb-4" src="{{ page.hero.promo3.icon }}" alt="{{ page.hero.promo3.title }}" />
+              <img src="{{ page.hero.promo3.icon }}" alt="{{ page.hero.promo3.title }}" />
             </figure>
+            {% if page.hero.promo3.url  | size > 0 %}
             <h5><a href="{{ page.hero.promo3.url }}" class="dark">{{ page.hero.promo3.title }}</a></h5>
+            {% else %}
+            <h5>{{ page.hero.promo3.title }}</h5>
+            {% endif %}
             <p>{{ page.hero.promo3.content }}</p>
           </div>
         </div>
