--- a/site/index.html
+++ b/site/index.html
@@ -118,13 +118,13 @@ secondary_ctas:
     <div class="row bg-grey">
       <div class="col-sm-5 mb-3 mb-sm-0">
         <h6 class="mb-1">
-          <a href="{{ page.secondary_ctas.cta1.url }}" class="dark">{{ page.secondary_ctas.cta1.title }}</a>
+          <a href="{{ page.secondary_ctas.cta1.url }}">{{ page.secondary_ctas.cta1.title }}</a>
         </h6>
         <p class="mb-0">{{ page.secondary_ctas.cta1.content }}</p>
       </div>
       <div class="col-sm-5 offset-sm-2">
         <h6 class="mb-1">
-          <a href="{{ page.secondary_ctas.cta2.url }}" class="dark">{{ page.secondary_ctas.cta2.title }}</a>
+          <a href="{{ page.secondary_ctas.cta2.url }}">{{ page.secondary_ctas.cta2.title }}</a>
         </h6>
         <p class="mb-0">{{ page.secondary_ctas.cta2.content }}</p>
       </div>
