--- a/site/index.html
+++ b/site/index.html
@@ -13,7 +13,7 @@ hero:
     url: https://blogs.vmware.com/cloudnative/2019/02/28/velero-v0-11-delivers-an-open-source-tool-to-back-up-and-migrate-kubernetes-clusters/
   cta_link2:
     text:  Download Velero
-    url: https://github.com/heptio/velero/releases/tag/v1.0.0-alpha.2
+    url: https://github.com/heptio/velero/releases/tag/v1.0.0
   promo1:
     icon: /img/disaster-recover-icon.svg
     #url: http://www.example.com?box1
