Add some more SEO
Signed-off-by: Jonas Rosland <jrosland@vmware.com>

--- a/site/blog.html
+++ b/site/blog.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 title: Blog
+description: Velero Blog
 id: blog
 ---
 <div class="post-single-hero bg-color-{{ site.hero.background-color }}">
