--- a/site/index.html
+++ b/site/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
 id: home
+description: Backup and migrate Kubernetes resources and persistent volumes
 backgrounds:
   case_study: light-blue
   team: dark-blue
