--- a/site/index.html
+++ b/site/index.html
@@ -11,10 +11,10 @@ hero:
   content: Velero is an open source tool to safely backup and restore, perform disaster recovery, and migrate Kubernetes cluster resources and persistent volumes.
   cta_link1:
     text: Latest Release Information
-    url: /velero-1.0-has-arrived/
+    url: /announcing-velero-1.1/
   cta_link2:
     text:  Download Velero
-    url: https://github.com/heptio/velero/releases/tag/v1.0.0
+    url: https://github.com/heptio/velero/releases/latest
   promo1:
     icon: /img/disaster-recover-icon.svg
     title: Disaster Recovery
