--- a/site/content/resources/_index.html
+++ b/site/content/resources/_index.html
@@ -8,19 +8,15 @@ layout: section
     <p class="section-header">All Community Meetings</p>
     <div class="grid three">
         <div class="col">
-            <div class="icon">
-                <h3>Community Meetings Playlist</h3>
-            </div>
+            <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/tXgHngEc3zU?list=PL7bmigfV0EqQRysvqvqOtRNk4L5S7uqwM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <div class="content">
-                <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/tXgHngEc3zU?list=PL7bmigfV0EqQRysvqvqOtRNk4L5S7uqwM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p class="title">Community Meetings Playlist</p>
             </div>
         </div>
         <div class="col">
-            <div class="icon">
-                <h3>Velero Demo and Deep Dives Playlist</h3>
-            </div>
-            <div class="content">
-                <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/WMCC-LB3ZWc?list=PL7bmigfV0EqT82eQaVCslWWM4k4d63KyK" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/WMCC-LB3ZWc?list=PL7bmigfV0EqT82eQaVCslWWM4k4d63KyK" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+            <div class="content">    
+                <p class="title">Velero Demo and Deep Dives Playlist</p>
             </div>
         </div>
     </div>
@@ -46,51 +42,39 @@ layout: section
     <p class="section-header">Videos</p>
     <div class="grid three">
         <div class="col">
-            <div class="icon">
-                <h3>Kubecon NA 2019 - How to Backup and Restore Your Kubernetes Cluster - Annette Clewett & Dylan Murray, Red Hat:</h3>
-            </div>
+            <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/JyzgS-KKuoo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <div class="content">
-                <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/JyzgS-KKuoo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p class="title">Kubecon NA 2019 - How to Backup and Restore Your Kubernetes Cluster - Annette Clewett & Dylan Murray, Red Hat:</p>
             </div>
         </div>
         <div class="col">
-            <div class="icon">
-                <h3>Kubernetes Back Up, Restore and Migration with Velero - A NewStack interview, with guests: Carlisia Campos, Tom Spoonemore, and Efri Nattel-Shayo:</h3>
-            </div>
+            <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/71NoY5CIcQ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <div class="content">
-                <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/71NoY5CIcQ8" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p class="title">Kubernetes Back Up, Restore and Migration with Velero - A NewStack interview, with guests: Carlisia Campos, Tom Spoonemore, and Efri Nattel-Shayo:</p>
             </div>
         </div>
         <div class="col">
-            <div class="icon">
-                <h3>How to migrate applications between Kubernetes clusters using Velero:</h3>
-            </div>
+            <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/IZlwKMoqBqE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <div class="content">
-                <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/IZlwKMoqBqE" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p class="title">How to migrate applications between Kubernetes clusters using Velero:</p>
             </div>
         </div>
         <div class="col">
-            <div class="icon">
-                <h3>TGIK 080: Velero 1.0:</h3>
-            </div>
+            <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/tj5Ey2bHsfM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <div class="content">
-                <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/tj5Ey2bHsfM" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p class="title">TGIK 080: Velero 1.0:</p>
             </div>
         </div>
         <div class="col">
-            <div class="icon">
-                <h3>Watch our recent webinar on backup and migration strategies:</h3>
-            </div>
+            <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/csrSPt3HFtg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <div class="content">
-                <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/csrSPt3HFtg" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p class="title">Watch our recent webinar on backup and migration strategies:</p>
             </div>
         </div>
         <div class="col">
-            <div class="icon">
-                <h3>Velero demo by Just me and Opensource - [ Kube 45 ] Velero - Backup & Restore Kubernetes Cluster:</h3>
-            </div>
+            <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/C9hzrexaIDA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
             <div class="content">
-                <p><iframe width="100%" height="auto" src="https://www.youtube.com/embed/C9hzrexaIDA" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe></p>
+                <p class="title">Velero demo by Just me and Opensource - [ Kube 45 ] Velero - Backup & Restore Kubernetes Cluster:</p>
             </div>
         </div>
     </div>
